--- a/src/app/components/marketplace/concert-sell/concert-sell.component.html
+++ b/src/app/components/marketplace/concert-sell/concert-sell.component.html
@@ -23,22 +23,21 @@
     </div>
     
     <div class="concert-container">
-        <a *ngFor="let event of events"
-            [routerLink]="[event.eventAddress]"
-            >
-            <mat-card class="concert" >
-                <mat-card-header>
+        <mat-card class="concert" *ngFor="let event of events" (click)="goToEvent(event)">
+            <mat-card-header>
                 <mat-card-title>{{event.name}} {{event.date | date:'medium'}} </mat-card-title>
                 <mat-card-subtitle>{{event.eventAddress}}</mat-card-subtitle>
-                </mat-card-header>
-                <mat-card-content class="concert-content">
-                    <mat-card-actions>
-                        <button mat-raised-button color="primary"
-                            class="btn-details"
-                        > Click here to see more details &#8594;</button>
-                    </mat-card-actions>
-                </mat-card-content>
-            </mat-card>
-        </a>
+            </mat-card-header>
+            <mat-card-content class="concert-content">
+                <p>
+                    {{event.description}}
+                </p>
+                <mat-card-actions>
+                    <button mat-raised-button color="primary"
+                        class="btn-details"
+                    > Click here to see more details &#8594;</button>
+                </mat-card-actions>
+            </mat-card-content>
+        </mat-card>
     </div>
 </div>
