--- a/src/app/components/marketplace/standard-ticket/standard-ticket.component.html
+++ b/src/app/components/marketplace/standard-ticket/standard-ticket.component.html
@@ -1,88 +1,83 @@
 
 <div class="tickets">
     <ng-container 
-        *ngFor="let ticket of ticketsMap | keyvalue">
-
-        <ng-container *ngIf="ticket.value.seatNumber == 0; else numerable">
+        *ngFor="let ticket of tickets">
+    
+        <ng-container *ngIf="!getAttributeByTraitType(ticket, TRAIT_TYPE.SEAT_NO)?.value; else numerable">
             <mat-card class="ticket">
+
                 <mat-card-header>
                     <mat-card-subtitle>
-                        Sector: {{ ticket.value.sectorName }}
+                        TICKET
                     </mat-card-subtitle>
                 </mat-card-header>
-                <mat-card-content>
-                    <div>
-                        Sector without numerable seats
-                    </div>
-                    <div>
-                        Price: {{ ticket.value.price | weiToEth }} ETH
-                    </div>
-                    <div>
-                        Minted by organizator: 
-                        <ng-container *ngIf="ticket.value.minted === false; else minted"
-                            > 
-                            <mat-icon class="red-icon-small">highlight_off</mat-icon>
-                        </ng-container>
-                        <ng-template #minted>
-                            <mat-icon class="green-icon-small">check_circle_outline</mat-icon> 
-                        </ng-template>
-                    </div>
 
+                <mat-card-content>
+                    <ng-container *ngFor="let attr of ticket.attributes">
+                        <ng-container *ngIf="attr.trait_type === TRAIT_TYPE.SECTOR">
+                            Sector: {{ attr.value }}
+                        </ng-container>
+                        <ng-container *ngIf="attr.trait_type === TRAIT_TYPE.PRICE">
+                            <div>
+                                Sector without numerable seats
+                            </div>
+                            <div>
+                                Price: {{ attr.value | weiToEth }} ETH
+                            </div>
+                        </ng-container>
+                    </ng-container>
                     <mat-card-actions>
                         <mat-form-field appearance="fill" >
                             <mat-label>Number of tickets</mat-label>
-                            <!-- TODO add max value after fixing smartcontract "amount bug" -->
                             <input matInput type="number" min="1" 
                                 [(ngModel)]="amount">
                         </mat-form-field>
                     <div>
                         <button mat-raised-button color="primary"
                             class="btn-details"
-                            (click)="buyTicket(ticket.key, ticket.value.price, amount)">
+                            (click)="buyTicket(ticket, amount)">
                             BUY
                         </button>
                     </div>
                     </mat-card-actions>
                 </mat-card-content>
-
             </mat-card>
         </ng-container> 
         <!-- NUMERABLE TICKETS -->
         <ng-template #numerable>        
             <mat-card class="ticket">
                 <mat-card-header>
-                    <mat-card-title>
-                        Seat: {{ ticket.value.seatNumber }} 
-                    </mat-card-title>
                     <mat-card-subtitle>
-                        Sector: {{ ticket.value.sectorName }}
+                        TICKET
                     </mat-card-subtitle>
                 </mat-card-header>
                 <mat-card-content>
-                    <div>
-                        Price: {{ ticket.value.price | weiToEth }} ETH
-                    </div>
-                    <div>
-                        Minted by organizator: 
-                        <ng-container *ngIf="ticket.value.minted === false; else minted"
-                            > 
-                            <mat-icon class="red-icon-small">highlight_off</mat-icon>
+                    <ng-container *ngFor="let attr of ticket.attributes">
+                        <ng-container *ngIf="attr.trait_type === TRAIT_TYPE.SEAT_NO">
+                            <div>
+                                Seat: {{ attr.value }}
+                            </div> 
                         </ng-container>
-                        <ng-template #minted>
-                            <mat-icon class="green-icon-small">check_circle_outline</mat-icon> 
-                        </ng-template>
-                    </div>
-
+                        <ng-container *ngIf="attr.trait_type === TRAIT_TYPE.SECTOR">
+                            <div>
+                                Sector: {{ attr.value }}
+                            </div>
+                        </ng-container>
+                        <ng-container *ngIf="attr.trait_type === TRAIT_TYPE.PRICE">
+                            <div>
+                                Price: {{ attr.value | weiToEth }} ETH
+                            </div>
+                        </ng-container>
+                    </ng-container>
                     <mat-card-actions>
                         <button mat-raised-button color="primary"
                             class="btn-details"
-                            (click)="buyTicket(ticket.key, ticket.value.price)">
+                            (click)="buyTicket(ticket)">
                             BUY
                         </button>
                     </mat-card-actions>
                 </mat-card-content>
             </mat-card>
         </ng-template>
-
     </ng-container>
 </div> 
