Add organzer rate

--- a/src/app/components/marketplace/concert-sectors/concert-sectors.component.html
+++ b/src/app/components/marketplace/concert-sectors/concert-sectors.component.html
@@ -12,7 +12,9 @@
         </h4>
     </div>
     <div class="organizer-info">
-
+        <app-organizer-rating    
+            [eventAddress]="eventData.eventAddress!"
+        ></app-organizer-rating>
     </div>
     <swiper
         [slidesPerView]="5"
