--- a/src/app/components/marketplace/concert-sell/concert-sell.component.html
+++ b/src/app/components/marketplace/concert-sell/concert-sell.component.html
@@ -10,17 +10,28 @@
         </button>
     </mat-form-field>
 </div>
-
-<div class="concert-container">
-    <a *ngFor="let concert of concerts | filterConcerts: searchText"
-        [routerLink]="[concert.contractAddress]"
-        >
-        <mat-card class="concert" >
+<div class="events">
+    <div class="type-selection">
+        <mat-selection-list multiple="false" [(ngModel)]="selectedType" (ngModelChange)="onSelectedTypeChange($event)">
+            <ng-container *ngFor="let eventType of eventTypes | keyvalue">
+                <!-- Filter numerical values of keyvalue (enums were duplicated) -->
+                <mat-list-option *ngIf="!eventType.value.toFixed" [value]="eventType.key">
+                    {{eventType.value}}
+                </mat-list-option>
+            </ng-container>
+        </mat-selection-list>
+    </div>
+    
+    <div class="concert-container">
+        <mat-card class="concert" *ngFor="let event of events | filterConcerts: searchText" (click)="goToEvent(event)">
             <mat-card-header>
-            <mat-card-title>{{concert.name}}</mat-card-title>
-            <mat-card-subtitle>{{concert.contractAddress}}</mat-card-subtitle>
+                <mat-card-title>{{event.name}} {{event.date | date:'medium'}} </mat-card-title>
+                <mat-card-subtitle>{{event.eventAddress}}</mat-card-subtitle>
             </mat-card-header>
             <mat-card-content class="concert-content">
+                <p>
+                    {{event.description}}
+                </p>
                 <mat-card-actions>
                     <button mat-raised-button color="primary"
                         class="btn-details"
@@ -28,5 +39,5 @@
                 </mat-card-actions>
             </mat-card-content>
         </mat-card>
-    </a>
+    </div>
 </div>
