--- a/src/app/components/user/my-nft/my-nft.component.html
+++ b/src/app/components/user/my-nft/my-nft.component.html
@@ -24,7 +24,7 @@
                             <b> Concert informations: </b>
                             <ng-container *ngFor="let attr of nft.metadata.attributes">
                                 <ng-container *ngIf="attr.trait_type === 'Date'">
-                                    <div> Date: {{ attr.value * 1000 | date:'medium' }}</div>
+                                    <div> Date: {{ attr.value | date:'medium' }}</div>
                                 </ng-container>
                                 <ng-container *ngIf="attr.trait_type === 'Sector'">
                                     <div> Sector: {{ attr.value }}</div>
@@ -33,16 +33,10 @@
                                     <ng-container *ngIf="attr.value === 0 else numerated">
                                         Not numerated
                                     </ng-container>
-                                    <ng-template #numerated> Seat: {{ attr.value }}</ng-template>
+                                        <ng-template #numerated> Seat: {{ attr.value }}</ng-template>
                                     </ng-container>
-                                    </ng-container>
+                                </ng-container>
                         </div>
-                        <mat-card-actions> 
-                            <button mat-button
-                            (click)="sellTicket(nft)">
-                                Create offer
-                            </button>   
-                        </mat-card-actions>
                     </mat-card-content>
                 </mat-card>
             </ng-container>            
