--- a/src/styles.scss
+++ b/src/styles.scss
@@ -62,3 +62,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   vertical-align: middle;
 }
 
+.mat-select-panel-wrap {
+  margin-top: 35px;
+}
+
