--- a/src/app/components/concert-management/my-concerts/my-concerts.component.html
+++ b/src/app/components/concert-management/my-concerts/my-concerts.component.html
@@ -3,35 +3,39 @@
         Here you can find your concerts:
     </h2>
 
-    <mat-card class="concert" *ngFor="let event of events">
-        <mat-card-header>
-        <mat-card-title>
-            {{event.name}}
-            <span class="concert-date">
-                <mat-icon>today</mat-icon>
-                {{ event.date | date:'medium' }}
-            </span>
-        </mat-card-title>
-        <mat-card-subtitle>{{event.eventAddress}}</mat-card-subtitle>
-        </mat-card-header>
-        <mat-card-content class="concert-content">
-            <div>
-                Link to your assets: <a href="{{event.ipfsLink}}">{{ event.ipfsLink }} </a>
-            </div>
-            <div class="description">
-                {{event.description}}
-            </div>
-            <mat-card-actions>
-                <button mat-raised-button color="primary" class="btn-withdraw" (click)="withdraw(event.eventAddress)">
-                    Withdraw founds
-                </button>
-                <button mat-button color="primary" class="btn-occupancy" (click)="checkOccupancy(event.eventAddress, event.sectors)">
-                    Check seat occupancy
-                </button>
-                <ng-container *ngIf="seatOccupancyMap.has(event.eventAddress!)" class="seat-occupancy">
-                    {{seatOccupancyMap.get(event.eventAddress!)}} %
-                </ng-container>            
-            </mat-card-actions>
-        </mat-card-content>
-    </mat-card>
+    <div class="concerts-grid">
+        <mat-card class="concert" *ngFor="let event of events">
+            <mat-card-header>
+                <mat-card-title class="card-titles">
+                    <span class="main-title">
+                        {{event.name}}
+                    </span>
+                    <span>
+                        <mat-icon>today</mat-icon>
+                        {{ event.date | date:'medium' }}
+                    </span>
+                </mat-card-title>
+            <mat-card-subtitle>{{event.eventAddress}}</mat-card-subtitle>
+            </mat-card-header>
+            <mat-card-content class="concert-content">
+                <div>
+                    Link to your assets: <a href="{{event.ipfsLink}}">{{ event.ipfsLink }} </a>
+                </div>
+                <div class="description">
+                    {{event.description}}
+                </div>
+                <mat-card-actions>
+                    <button mat-raised-button color="primary" class="btn-withdraw" (click)="withdraw(event.eventAddress)">
+                        Withdraw founds
+                    </button>
+                    <button mat-button color="primary" class="btn-occupancy" (click)="checkOccupancy(event.eventAddress, event.sectors)">
+                        Check seat occupancy
+                    </button>
+                    <ng-container *ngIf="seatOccupancyMap.has(event.eventAddress!)" class="seat-occupancy">
+                        {{seatOccupancyMap.get(event.eventAddress!)}} %
+                    </ng-container>            
+                </mat-card-actions>
+            </mat-card-content>
+        </mat-card>
+    </div>
 </div>
