--- a/src/app/components/concert-management/create-concert/create-concert.component.html
+++ b/src/app/components/concert-management/create-concert/create-concert.component.html
@@ -12,7 +12,7 @@
                 </mat-form-field>
             </div>
             <div>
-                <mat-form-field>
+                <mat-form-field class="form-full-width">
                     <mat-label>Event type</mat-label>
                     <mat-select placeholder="Event name" formControlName="eventType">
                         <ng-container *ngFor="let enum of eventTypes | keyvalue">
