--- a/src/app/components/concert-management/my-concerts/my-concerts.component.scss
+++ b/src/app/components/concert-management/my-concerts/my-concerts.component.scss
@@ -4,6 +4,18 @@
     background-color: rgb(250, 250, 250);
 }
 
+mat-card-header {
+    display: block;
+}
+
+.card-titles{
+    display: flex;
+}
+
+.main-title {
+    flex:1
+}
+
 .concert-content {
     padding: 10px;
 }
@@ -23,4 +35,9 @@
 
 .seat-occupancy{
     font-size: 2em;
+}
+
+.concerts-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
