--- a/src/app/components/concert-management/create-concert/create-concert.component.html
+++ b/src/app/components/concert-management/create-concert/create-concert.component.html
@@ -79,7 +79,12 @@
                 Make sure that all data provider in previous tabs is correct! <br>
             </b>
         </div>
-        <button mat-raised-button color="primary" class="btn-log-in" 
+        <div class="info-achtung">
+            <b>
+                Current fee for owner of contract: {{ ownerFee | weiToEth }} ETH<br>
+            </b>
+        </div>
+        <button mat-raised-button color="primary" class="btn" 
         (click)="createConcert()"
         > Create Contract Concert</button>
     </mat-step>
