--- a/src/app/components/marketplace/concert-sell/concert-sell.component.html
+++ b/src/app/components/marketplace/concert-sell/concert-sell.component.html
@@ -35,7 +35,7 @@
                 <mat-card-actions>
                     <button mat-raised-button color="primary"
                         class="btn-details"
-                    > Click here to see more details &#8594;</button>
+                    > Read more &#8594;</button>
                 </mat-card-actions>
             </mat-card-content>
         </mat-card>
